--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "short_name":"app",
     "start_url":"/",
     "display":"standalone",
-    "background_color":"#ffffff",
-    "theme_color":"#5599ff",
+    "background_color":"#000000",
+    "theme_color":"#000000",
     "icons":[
         {
             "src":"icons/icon-192.png",
